--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ footer{
 	<img src="./img/header.png">
 </div>
 <div id="top">
-	로그인 ㅣ 회원가입 ㅣ 마이페이지 ㅣ 고객센터
+	로그인 ㅣ 회원가입 ㅣ <a href=8wnckrhkwp.html>마이페이지</a> ㅣ 고객센터
 </div>
 </header>
 <div class="clear"></div>
@@ -131,7 +131,7 @@ footer{
 		<li> 건강정책 </li>
 		<li> 정책정보 </li>
 		<li> 연구개발 </li>
-		<li> 알림, 자료 </li>
+		<li> <a href="indexx.html" target="_blank"> 알림, 자료 </a> </li>
 		<li> 간행물, 통계 </li>
 		<li> 민원, 정보공개 </li>
 		<li> 기관소개 </li>
