--- a/8wnckrhkwp.html
+++ b/8wnckrhkwp.html
@@ -37,7 +37,7 @@
 	<hr>
 	<table border="0">
 	<tr> 
-		<td> <a href="8wnckrhkwp1.html" target="_blank"> <img src="./img/sohyeonlee.jpg" id="left" width="400px" height="500px"> </td>
+		<td> <a href="8wnckrhkwp1.html" target="_blank"> <img src="./img/sohyeonlee.JPG" id="left" width="400px" height="500px"> </td>
 		<td> <a href="8wnckrhkwp2.html" target="_blank"> <img src="./img/essay.png" width="400px" height="500px"> </td>
 		<td> <a href="8wnckrhkwp3.html" target="_blank"> <img src="./img/computer.png" width="400px" height="500px"> </td>
 		<td> <a href="8wnckrhkwp4.html" target="_blank"> <img src="./img/rolemodel.png" width="400px" height="500px"> </td>
